fix terminal color

--- a/gtk.css
+++ b/gtk.css
@@ -5,7 +5,7 @@ terminal-screen-container box {
 }
 
 terminal-window {
-	background-color: #2C2C2C;;
+	background-color: #1e1e1e;
 	border-radius: 0 0 7px 7px;
 }
 
